# diffblas

./: .gitignore  README.md  compilation.sh  meson.build  meson_options.txt  run_tapenade_blas.py
.github/julia/: build_tarballs.jl  generate_binaries.jl  make_dashboard.jl
.github/workflows/: diff_blas.yml  diffblas.yml  draft-pdf.yml  meson.yml  release.yml  tapenade.yml
BLAS/: Makefile  dashboard.sh  meson.build  meson.build.bk  run_tests.sh  test_python_interfaces.sh
BLAS/include/: DIFFSIZES.f90  DIFFSIZES.inc
BLAS/src/: DIFFSIZES.f90  DIFFSIZES_access.f  caxpy_b.f  caxpy_bv.f  caxpy_d.f  caxpy_dv.f  ccopy_b.f  ccopy_bv.f  ccopy_d.f  ccopy_dv.f  cdotc_b.f  cdotc_bv.f  cdotc_d.f  cdotc_dv.f  cdotu_b.f  cdotu_bv.f  cdotu_d.f  cdotu_dv.f  cgbmv_b.f  cgbmv_bv.f  cgbmv_d.f  cgbmv_dv.f  cgemm_b.f  cgemm_bv.f  cgemm_d.f  cgemm_dv.f  cgemv_b.f  cgemv_bv.f  cgemv_d.f  cgemv_dv.f  cgerc_b.f  cgerc_bv.f  cgerc_d.f  cgerc_dv.f  cgeru_b.f  cgeru_bv.f  cgeru_d.f  cgeru_dv.f  chbmv_b.f  chbmv_bv.f  (+366 more)
BLAS/test/: test_caxpy.f90  test_caxpy_reverse.f90  test_caxpy_vector_forward.f90  test_caxpy_vector_reverse.f90  test_ccopy.f90  test_ccopy_reverse.f90  test_ccopy_vector_forward.f90  test_ccopy_vector_reverse.f90  test_cdotc.f90  test_cdotc_reverse.f90  test_cdotc_vector_forward.f90  test_cdotc_vector_reverse.f90  test_cdotu.f90  test_cdotu_reverse.f90  test_cdotu_vector_forward.f90  test_cdotu_vector_reverse.f90  test_cgbmv.f90  test_cgbmv_reverse.f90  test_cgbmv_vector_forward.f90  test_cgbmv_vector_reverse.f90  test_cgemm.f90  test_cgemm_reverse.f90  test_cgemm_vector_forward.f90  test_cgemm_vector_reverse.f90  test_cgemv.f90  test_cgemv_reverse.f90  test_cgemv_vector_forward.f90  test_cgemv_vector_reverse.f90  test_cgerc.f90  test_cgerc_reverse.f90  test_cgerc_vector_forward.f90  (+373 more)
TAPENADE/: adStack.c  meson.build
paper/: paper.bib  paper.md
